test/errors/identifiers_error/zs/invalid_name/const_name_error.zs
package invalid_name.const_name_error;

const uint8 lowerCaseConst = 42;
